<resources>
    <string name="app_name">TODO List</string>
    <string name="app_version">0.3</string>
    <string name="app_developer">Desenvolvedor: Felipe Bagnato</string>

    <string name="menu_tarefas">Tarefas</string>
    <string name="menu_cadernos">Cadernos</string>
    <string name="menu_sobre">Sobre</string>
    <string name="label_info_activity">DETALHES</string>
    <string name="label_form_criar">Criar Tarefa</string>
    <string name="label_form_editar">Editar Tarefa</string>
    <string name="sem_data">sem data</string>
    <string name="task_name">Nome</string>
    <string name="task_description">Descricao (max: 2048 caracteres)</string>
    <string name="task_date">Selecione a data limite</string>
    <string name="task_save_button">Salvar</string>
    <string name="botao_excluir">Excluir</string>
    <string name="botao_editar">Editar</string>
    <string name="select_cor">Cor</string>
    <string name="date_format">dd MMM yyyy</string>

    <string name="alert_dialog_excluir_titulo">Remover Tarefa</string>
    <string name="alert_dialog_excluir_mensagem">Você deseja remover essa tarefa?</string>
    <string name="alert_dialog_positive">Sim</string>
    <string name="alert_dialog_neutral">Não</string>
    <string name="sucesso_excluir_tarefa">Tarefa excluida!</string>
    <string name="falha_excluir_tarefa">Não foi possível excluir esta tarefa</string>
    <string name="nome_vazio_tarefa">Insira o nome da tarefa!</string>
    <string name="sucesso_salvar_tarefa">Tarefa salva!</string>
    <string name="falha_salvar_tarefa">Falha ao salvar a tarefa!</string>
    <string name="sucesso_editar_tarefa">Tarefa editada!</string>
    <string name="falha_editar_tarefa">Nao foi possivel editar essa tarefa!</string>

    <string name="menu_item_label">Ordenar por:</string>
    <string name="menu_item_mais_antigo">Mais antigo primeiro</string>
    <string name="menu_item_mais_novo">Mais novo primeiro</string>
    <string name="menu_item_data_limite">Data limite</string>
    <string name="menu_item_alfabetica">A - Z</string>
</resources>