<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:inputType="textCapSentences"
        android:hint="@string/task_name"/>

    <EditText
        android:id="@+id/edit_descricao"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/edit_nome"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="8dp"
        android:layout_marginTop="28dp"

        android:background="@drawable/round_border"
        android:gravity="start"
        android:inputType="textMultiLine|textCapSentences"
        android:hint="@string/task_description"
        android:maxLength="199"/>

    <TextView
        android:id="@+id/text_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_descricao"
        android:layout_marginTop="16dp"

        android:textSize="18sp"
        android:text="@string/task_date"/>

    <Button
        android:id="@+id/button_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_data"
        app:layout_constraintStart_toStartOf="@id/text_data"
        app:layout_constraintEnd_toEndOf="@id/text_data"
        android:layout_marginTop="42dp"

        android:backgroundTint="@color/gray"
        android:text="@string/task_save_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>